--- a/main.html
+++ b/main.html
@@ -15,6 +15,12 @@
             <li><a href="#">Contact us</a></li>
         </ul>
     </nav>
+	 <h2>Unordered List Example</h2>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
 
     <!-- Videos Section -->
     <section class="video-section">
